--- a/src/pages/HealthFacts.css
+++ b/src/pages/HealthFacts.css
@@ -1,19 +1,30 @@
-img {
-    padding: 20px
-    }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
+img {
+    padding: 10px;
+    }
+    
+    .textbackground{
+    background-color: #00393B;
+    padding: 20px;
+    color: white;
+    text-align: justify;
+    margin-right: 50px;
+    }
+    
     .header {
     padding: 10px;
     font-weight: bolder;
     font-size: 60px;
     color: whitesmoke;
     }
-
+    
     .headerBackground {
     background-color: #00C2CB;
     opacity: 0.9;
+    margin-left: 50px;
     }
-
+    
     .trainingIntro {
     font-size: 16px;
     color: white;
@@ -21,50 +32,60 @@ img {
     background-color: #00C2CB;
     text-align: justify;
     padding: 20px;
+    font-family: Montserrat;
     }
 
+    .Health__facts__paragraph {
+        text-align: justify;
+        color: white;
+        font-family: Montserrat;
+    }
+
+    .healthfact {
+        text-align: center;
+        color: white;
+        font-family: Montserrat;
+    }
+    
     .trainingPage {
+    background-image: url("https://cdn.the-scientist.com/assets/articleNo/69156/aImg/43446/colorful-coronavirus-mixing-paint-800-l.jpg");
     display: flex;
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #f5f5f5;
-    background-image: url("https://cdn.the-scientist.com/assets/articleNo/69156/aImg/43446/colorful-coronavirus-mixing-paint-800-l.jpg%22");
-    margin-left: 60px;
-    margin-right: 60px;
     }
-
+    
     h1 {
     font-weight: bolder;
     color: #00C2CB;
     text-align: center;
     }
-
+    
     h2, h3 {
     font-weight: bold;
     color: white;
     }
-
-    .Healthfactsparagraph {
-    color: white;
-    background-color: #00393B;
-    padding: 20px;
-    text-align: justify;
-    }
-
-    h1, h2, h3, .Healthfactsparagraph {
+    
+    h1, h2, h3, .textbackground {
     font-family: 'Poppins', sans-serif;
     }
-
+    
     h2, h3 {
-    font-family: 'Poppins', sans-serif;
+    font-family: Montserrat, sans-serif;
     background-color: #00C2CB;
     opacity: 0.7;
     padding: 10px;
     text-align: center;
     }
-
+    
     .HealthFacts {
     background-color: #00393B;
     padding: 20px;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
     }
+    
