--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
 html,
+
+.loginBackground{
+    background-image: url("https://cdn.the-scientist.com/assets/articleNo/69156/aImg/43446/colorful-coronavirus-mixing-paint-800-l.jpg");
+    }
+    
 .body {
 height: 100%;
 }
@@ -6,6 +13,7 @@ height: 100%;
 .homepagetitle {
 color: white;
 opacity: 0.9;
+font-family: Montserrat, sans-serif;
 }
 
 .body {
@@ -49,7 +57,7 @@ border-top-right-radius: 0;
 .signin {
 color: white;
 background-color: #00C2CB;
-font-family: 'Poppins', sans-serif;
+font-family: Montserrat, sans-serif;
 font-weight: bolder;
 }
 
